Fix MDX figure borders and heading text-wrap

--- a/src/resources/custom.css
+++ b/src/resources/custom.css
@@ -1,3 +1,8 @@
+article h1, article h2, article h3,
+article h4, article h5, article h6 {
+  text-wrap: pretty;
+}
+
 /* :root {
   /*
   /* Override default variables here */
